1. Overflow utility added 2. Variant colon escaping fixed in several utilities

--- a/_config.scss
+++ b/_config.scss
@@ -294,9 +294,10 @@ $modules: (
   background-color: (responsive, hover, group-hover),
   border-color: (focus),
   border-radius: true,
+  overflow: true,
   border-style: false,
   border-width: (ems),
-  box-shadow: (responsive, hover, group-hover),
+  box-shadow: true,
   colors: (hover),
   flex-direction: true,
   font-leading: true,
