--- a/_core.scss
+++ b/_core.scss
@@ -36,6 +36,7 @@
 @include leading;
 @include margins;
 @include opacities;
+@include overflow;
 @include padding;
 @include positions;
 @include text-align;
